# mlops-2024-homework

./: README.md
aws-serverless-demo/: .gitignore  Dockerfile  README.MD  pyproject.toml
aws-serverless-demo/helpers/: create_lambda.py  invoke_lambda.py  upload_to_ecr.py
aws-serverless-demo/lambda_src/: download_model.py  lambda_function.py
project2-lightning/: .gitignore  Dockerfile  PROJECT2.MD  README.md  requirements.txt  run.sh
project2-lightning/src/: data_module.py  train.py  train_module.py
project3-inference/: .gitignore  PROJECT3.MD  README.md  lth_results.json  results.ipynb
project3-inference/models/: quantization_results.json
project3-inference/results/: cnn_layer_pruning.json  fc_cnn_layer_pruning.json  fc_layer_pruning.json  l1_pruning_results.json  quantization_results.json  random_pruning_results.json  type_aware_pruning_results.json  weights_pruning_results.json
project3-inference/src/: conv6.py  get_data.py  lottery_ticket_finder.py  prune_layers.py  prune_weights.py  q_utils.py  quantize.py  train.py  train_lth.py  utils.py
project3-inference/src/quantization/: conv6.py  get_data.py  main.py  q_utils.py
