[tool.poetry]
name = "aws-serverless-demo"
version = "0.1.0"
description = ""
authors = ["Jan Gruszczynski <jangru4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.41"
docker = "^7.1.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
